--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wasm-sys",
+  "description": "Interact with WebAssembly at a low level",
   "version": "0.0.1",
-  "main": "dist/main.js",
   "files": [
     "dist/**"
   ],
